# img-browser

./: .gitignore  Cargo.toml  README.md  TODO.md
docs/: AI_CONTENT_MANAGEMENT.md  ARCHITECTURE.md  CODING_GUIDELINES.md  DATABASE_DESIGN.md  DEVELOPMENT.md  ROADMAP.md
examples/: defer.rs  win32-bitblt.rs  win32-dcomp.rs  win32-enumvols.rs  win32-fileinfo.rs  win32-imageview.rs  win32-msgbox.rs
src/: logging.rs  main.rs  winmain.rs
src/app/: config.rs  db.rs  error.rs  fs.rs  mod.rs  settings.rs  state.rs
src/app/db/: image_file.rs  mod.rs
src/app/ui/: mod.rs  widgets.rs
src/platform/: mod.rs  win32_main.rs
src/platform/win32/: bmp.rs  dialogs.rs  fs.rs  main.rs  mod.rs
