[workspace]
resolver = "2"

members = [
    ".", # "vendor/emulsion",
    # "vendor/avis-imgv",
]

exclude = [
    "vendor/*",
    # "vendor/avis-imgv",
]

[profile.dev.package."*"]
opt-level = 1
[profile.dev.build-override]
opt-level = 1
[profile.release]
lto = "thin"

[package]
edition = "2021"
name = "img-browser"
version = "0.1.0"

[features]
default = ["jpeg", "png", "webp", "gdi"]
# default = []
avif = ["image/avif"]
avif-native = ["image/avif-native"]
bmp = ["image/bmp"]
gif = ["image/gif"]
hdr = ["image/hdr"]
ico = ["image/ico"]
jpeg = ["image/jpeg"]
png = ["image/png"]
tiff = ["image/tiff"]
webp = ["image/webp"]

direct2d = ["windows/Win32_Graphics_Direct2D"]
direct3d = ["windows/Win32_Graphics_Direct3D"]
directx = ["windows/Graphics_DirectX"]
directx3d11 = ["windows/Graphics_DirectX_Direct3D11"]
direct3d10 = ["windows/Win32_Graphics_Direct3D10"]
direct3d11 = ["windows/Win32_Graphics_Direct3D11"]
direct3d12 = ["windows/Win32_Graphics_Direct3D12"]
directdraw = ["windows/Win32_Graphics_DirectDraw"]
directwrite = ["windows/Win32_Graphics_DirectWrite"]
dwm = ["windows/Win32_Graphics_Dwm"]
gdi = ["windows/Win32_Graphics_Gdi"]
gdiplus = ["windows/Win32_Graphics_GdiPlus"]
graphics-imaging = ["windows/Win32_Graphics_Imaging"]
graphics-imaging-d2d = ["windows/Win32_Graphics_Imaging_D2D"]
opengl = ["windows/Win32_Graphics_OpenGL"]
globalization = ["windows/Win32_Globalization"]
storage-pickers-provider = ["windows/Storage_Pickers_Provider"]
shell = ["windows/Win32_UI_Shell_Common"]

[dependencies]
chrono = "0.4.39"
defer = "0.2.1"
env_logger = "0.11.6"
image ={ version = "0.25.5", path = "../image-rs--image" }
log = { version = "0.4.25", features = ["std", "release_max_level_trace"] }
opencv = "0.94"
rand = { version = "0.8" }
windows-core = { version = "0.58.0", path = "../Microsoft--windows-rs/crates/libs/core" }
# dav1d = { version = "0.1.0", features = ["decode"] }
# emulsion = { path = "vendor/emulsion" }

[dependencies.windows]
version = "0.58"
path = "../Microsoft--windows-rs/crates/libs/windows"
features = [
    # the following are helpful for popping up a window or message box
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    # the following are helpful for working with files
    "Storage",
    "Storage_AccessCache",
    "Storage_BulkAccess",
    "Storage_Compression",
    "Storage_FileProperties",
    "Storage_Pickers",
    "Storage_Provider",
    "Storage_Search",
    "Storage_Streams",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    # the following are helpful for the bitblt example
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System",
    "Win32_System_LibraryLoader",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls_RichEdit",
    "Win32_System_Com",
    # inputs
    "Win32_UI_Input_Ime",
    # Networking
    "Win32_Networking",
    "Win32_Networking_BackgroundIntelligentTransferService",
    # DirectX
    "Foundation_Numerics",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging_D2D",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_Animation",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]
